Fixed typos, layout, images, refs

--- a/LaTeXi/applicabilita.tex
+++ b/LaTeXi/applicabilita.tex
@@ -6,11 +6,11 @@ Analizziamo i vari componenti dell'assistente vocale per comprenderne i requisit
 \subsection{Text To Speech e Speech To Text}
 Queste operazioni vengono svolte in cloud tramite le API di Google, e richiedono quindi \textbf{solamente una connessione ad internet}. Ovviamente, si configura la necessità di periferiche audio per la cattura e la riproduzione di audio. Un \textbf{microfono universale} ed un \textbf{set di altoparlanti} possono sopperire a tale necessità.
 \subsection{Analisi degli intent}
-L'assistente vocale procede all'analisi degli intent tramite Padatious e Adapt. Mentre il secondo si basa sul riconoscimento di hotwords, e non ha quindi grandi necessità in termini di calcolo, il primo è composto da una rete neurale che viene addestrata ad ogni avvio del bot. Questa è probabilmente l'\textbf{operazione che richiede più potenza} di calcolo hardware. Tuttavia, essendo svolta al solo avvio del bot, basterebbe pensare di avviare il bot \textbf{qualche minuto prima} dell'effettiva necessità di utilizzo per risolvere questa problematica.
+L'assistente vocale procede all'analisi degli intent tramite Padatious e Adapt. Mentre il secondo si basa sul riconoscimento di hotwords, e non ha quindi grandi necessità in termini di calcolo, il primo è composto da una rete neurale che viene addestrata ad ogni avvio del bot. Questa è probabilmente l'\textbf{operazione che richiede più potenza} di calcolo. Tuttavia, essendo svolta al solo avvio del bot, basterebbe pensare di avviare il bot \textbf{qualche minuto prima} dell'effettiva necessità di utilizzo per risolvere questa problematica.
 \subsection{fastai}
 Essendo il training del modello svolto a priori, non avremo grandi necessità di potenza di calcolo: l'operazione di \textit{inference} è \textbf{molto più leggera} dell'addestramento. È suggeribile quindi eseguire quest'ultimo su un computer più potente o direttamente in cloud, con strumenti come Google Colab, per poi \textbf{esportare il modello} nel formato di fastai tramite il comando \texttt{learn.export('/content/exported\_model')}.
 \subsection{Interfaccia grafica}
-Il software \textbf{Mycroft GUI} fa un pesante utilizzo del framework Qt, più specificatamente dei KDE Plasmoids, componenti grafici (simili a widgets) che caratterizzano l'ambiente desktop KDE. Per questo, risulta ovvio che il dispositivo su cui viene eseguito l'assistente vocale debba essere compatibile con KDE. Il team di Mycroft suggerisce, come sistema operativo, \textbf{KDE neon}, un sistema operativo basato su Ubuntu LTS. Questo nome garantisce un'ottima stabilità, semplicità d'uso, compatibilità.
+Il software \textbf{Mycroft GUI} fa un pesante utilizzo del framework Qt, più specificatamente dei KDE Plasmoids, componenti grafici (simili a widgets) che caratterizzano l'ambiente desktop KDE Plasma. Per questo, risulta ovvio che il dispositivo su cui viene eseguito l'assistente vocale debba essere compatibile con il suddetto. Il team di Mycroft suggerisce, come sistema operativo, \textbf{KDE neon}, consistente in una versione di  Ubuntu LTS con installato l'ambiente KDE Plasma. Questo nome garantisce un'ottima stabilità, semplicità d'uso, compatibilità.
 \section{Compatibilità, dispositivi ottimali e costi}
 La sezione precedente ha evidenziato come i requisiti tecnici dell'assistente vocale siano compatibili con una \textbf{vastissima gamma di dispositivi}, anche economici. Questo potrebbe \textbf{sgravare un'ulteriore spesa} ad un sistema ospedaliero vittima, da anni, di tagli e budget stringenti. Il software potrebbe infatti essere installato su un vecchio computer, o su un Raspberry Pi.
 \begin{figure}[H]
