--- a/LaTeXi/bibliography.bib
+++ b/LaTeXi/bibliography.bib
@@ -50,3 +50,9 @@
     title = {La riduzione di ospedali e posti letto negli ultimi 10 anni},
     url = {https://www.agi.it/fact-checking/news/2020-03-14/coronavirus-rianimazione-posti-letto-7500889/}
 }
+@misc{dataset:medical-speech,
+    author       = {Paul Mooney - Appen},
+    title        = {Medical Speech, Transcription, and Intent},
+    url =         {https://appen.com/datasets/audio-recording-and-transcription-for-medical-scenarios/},
+    year         = {2019}
+}
