--- a/LaTeXi/informations.tex
+++ b/LaTeXi/informations.tex
@@ -3,8 +3,8 @@
 I casi d'uso di uno strumento come questo assistente vocale potrebbero però \textbf{non fermarsi al mero indirizzamento di pazienti}. Infatti, potremmo plausibilmente aspettarci che gli utenti desiderino anche \textbf{ottenere informazioni di carattere medico} senza doversi per forza rivolgere ad un dottore.
 \section{Enciclopedia medica del Ministero della Salute}
 Pare ovvio sottolineare che le fonti delle informazioni riferite ai pazienti debbano essere \textbf{il più affidabili possibile}. Affidarsi a siti web come Wikipedia, per quanto comodo possa essere, è rischioso: le informazioni possono essere modificate da chiunque, anche e soprattutto persone poco qualificate.
-Esiste però, in rete, una risorsa sconosciuta ai più, ma senz'altro interessante per i nostri scopi: l'\textbf{enciclopedia medica del Ministero della Salute}, accessibile sul sito del suddetto.
-\begin{figure}[H]
+Esiste però, in rete, una risorsa sconosciuta ai più, ma senz'altro interessante per i nostri scopi: l'\textbf{Enciclopedia Medica del Ministero della Salute}, accessibile sul sito del suddetto.
+\begin{figure}[h]
     \begin{center}
         \includegraphics[width=0.8\columnwidth]{images/informations/MinSalute.png}
     \end{center}
