--- a/LaTeXi/introduzione.tex
+++ b/LaTeXi/introduzione.tex
@@ -1,6 +1,6 @@
 \chapter{Introduzione}
 \label{chap:introduzione}
-In una società sempre più digitalizzata e dinamica, spesso viene a crearsi un netto distacco tra i settori capaci di \textbf{evolvere assieme alla tecnologia}, e quelli che, per un motivo o per l'altro, rimangono ancorati a procedure e metodologie tradizionali. Il settore medico, in continuo rinnovamento sul lato scientifico, è, soprattutto in Italia, affidato ad \textbf{infrastrutture informatiche progettate tempo fa.} Questo, soprattutto per motivi di stabilità e affidabilità: gli errori, qui, non sono ammissibili. \\
+In una società sempre più digitalizzata e dinamica, spesso viene a crearsi un netto distacco tra i settori capaci di \textbf{evolvere assieme alla tecnologia}, e quelli che, per un motivo o per l'altro, rimangono ancorati a procedure e metodologie tradizionali. Il settore medico, in continuo rinnovamento sul lato scientifico, è, anche in Italia, affidato ad \textbf{infrastrutture informatiche progettate tempo fa.} Questo, soprattutto per motivi di stabilità e affidabilità: gli errori, qui, non sono ammissibili. \\
 Per questo motivo, spesso non si notano le evidenti possibilità di miglioramenti che la ricerca informatica potrebbe apportare agli ospedali, agli ambulatori, agli studi.
 L'obiettivo di questa tesi è mettere in luce una delle possibili modalità con cui l'informatica potrebbe, in un futuro prossimo, migliorare la praticità ma soprattutto la sicurezza degli ambienti ospedalieri.\\
 La procedura di triage, ossia il processo di selezione dei pazienti richiedenti cure, è oggi affidata totalmente ad infermieri. Questa scelta è dovuta, oltre ad un evidente bisogno di poter osservare il paziente, alla necessità dell'\textbf{immediatezza di un contatto verbale} con il personale sanitario. \\
